<resources>
    <string name="app_name">SwallowMonthJM</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="add_repeat_task">Add Routine</string>
    <string name="no_routines">No routines registered this month</string>

    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>

    <string name="result">Result Box</string>
    <string name="edit_profile">Edit</string>
    <string name="logout_profile">Logout</string>
    <string name="add_routine">Add Routine</string>
    <string name="add_task">Add Task</string>
    <string name="commit">commit</string>
    <string name="day_tasks">Day Tasks</string>
    <string name="todo">Todo</string>
    <string name="done">Done</string>
    <string name="select_level">Select Level</string>
    <string name="typing_in_your_task">Typing in your task</string>
    <string name="typing_in_your_routine">Typing in your routine</string>
    <string name="complete">Complete</string>
    <string name="routine_sample">total of 20 days and 10 routines</string>
    <string name="day_task_sample">, 2022 12 31</string>
    <string name="routine_task">Routine Task</string>
    <string name="username">username</string>
    <string name="username_goal">username goal</string>
    <string name="progress">progress</string>
    <string name="TODAY">TODAY</string>
    <string name="collecting_activities">Collecting Activities</string>
    <string name="complete_0">complete : 0</string>
    <string name="activity_0">activity : 0</string>
    <string name="point_0">point : 0</string>
    <string name="manage_your_month_periodically">Manage your month periodically!</string>
    <string name="swallow_a_month">Swallow a Month</string>
    <string name="swallow_month">SwallowMonth</string>
    <string name="put_id_mess">Enter your ID</string>
    <string name="put_pass_mess">Enter your password</string>
    <string name="put_pass_mes_repeat">Re-enter your password.</string>
    <string name="insert_mess">Sign up</string>
    <string name="login_mess">Login</string>
    <string name="back_mess">Back</string>
    <string name="add_today_task">Add Today Task</string>
    <string name="activity">Activity</string>
    <string name="my_multi_profile">My Multi-profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_your_new_id">Enter your new ID</string>
    <string name="enter_your_new_comment">Enter your new Comment</string>
    <string name="back">Back</string>
    <string name="check_for_auto_login">Check for Auto-Login</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="message">Message</string>
    <string name="view_all_friends">View all friends</string>
    <string name="view_all_records">View all Records</string>
    <string name="my_friends">My Friends</string>
    <string name="change">Change</string>
    <string name="message_list">Message List</string>
    <string name="alarm">Alarm</string>
    <string name="no_user_comment">No User Comment</string>
    <string name="no_recommend_user">No Recommend User !</string>
    <string name="this_user_has_no_friends">This user has no friends..</string>
    <string name="this_user_has_no_records">This user has no records..</string>
    <string name="you_has_no_records">No records.. Make task!</string>
    <string name="task">task</string>
    <string name="change_password">change password</string>
    <string name="monthly_top_3">Monthly Top 3</string>
    <string name="current_5_records">Current 5 Records</string>
</resources>