<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/color_type4"
    tools:context="com.example.SwallowMonthJM.InsertActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/item_mid_40_height"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/item_mid_50_height"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/main_margin_10"
            android:src="@drawable/main_icon" />

        <TextView
            android:fontFamily="@font/myyeongnamnu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/item_mid_height_30"
            android:text="@string/swallow_month"
            android:textSize="@dimen/item_height_double_big_text_size" />
    </LinearLayout>
    <EditText
        android:textStyle="bold"
        android:layout_width="@dimen/item_we_300"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/put_id_mess"
        android:textSize="@dimen/item_height_big_21_text_size" />
    <EditText
        android:textStyle="bold"
        android:layout_width="@dimen/item_we_300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_mid_height_20dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/put_pass_mess"
        android:textSize="@dimen/item_height_big_21_text_size" />
    <EditText
        android:textStyle="bold"
        android:layout_width="@dimen/item_we_300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_mid_height_20dp"
        android:gravity="center"
        android:inputType="textPassword"
        android:hint="@string/put_pass_mes_repeat"
        android:textSize="@dimen/item_height_big_21_text_size" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_mid_height_20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <android.widget.Button
            android:backgroundTint="@color/color_type3"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/item_mid_40_height"
            android:text="@string/insert_mess" />

        <android.widget.Button
            style="@style/ButtonText"
            android:backgroundTint="@color/color_type3"
            android:id="@+id/insert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_mess"/>
    </LinearLayout>
</LinearLayout>