<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendar_month_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginStart="@dimen/main_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textSize="@dimen/item_height_mid_text_size" />

        <TextView
            style="@style/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textSize="@dimen/item_height_mid_text_size" />

        <TextView
            style="@style/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textSize="@dimen/item_height_mid_text_size" />

        <TextView
            style="@style/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textSize="@dimen/item_height_mid_text_size" />

        <TextView
            style="@style/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textSize="@dimen/item_height_mid_text_size" />

        <TextView
            style="@style/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textSize="@dimen/item_height_mid_text_size" />

        <TextView
            style="@style/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textSize="@dimen/item_height_mid_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frag_calender_linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/frag_calender_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constrainedHeight="true"
            app:spanCount="7"
            tools:listitem="@layout/item_calendar" />
    </LinearLayout>
</LinearLayout>