<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendar.CalendarMonthFragment">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:gravity="bottom"
        android:id="@+id/slide_frame"
        app:umanoDragView="@id/main_layout"
        app:umanoOverlay="true"
        app:umanoPanelHeight="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/main_margin">

            <TextView
                android:id="@+id/frag_calender_YYYY_XX"
                style="@style/TextView1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:textSize="@dimen/item_height_mid_text_size"
                tools:text="xxxx년 x월" />

            <View
                style="@style/LineView1"
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sun"
                    android:textSize="@dimen/item_height_mid_text_size" />

                <TextView
                    style="@style/TextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mon"
                    android:textSize="@dimen/item_height_mid_text_size" />

                <TextView
                    style="@style/TextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tue"
                    android:textSize="@dimen/item_height_mid_text_size" />

                <TextView
                    style="@style/TextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wed"
                    android:textSize="@dimen/item_height_mid_text_size" />

                <TextView
                    style="@style/TextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tue"
                    android:textSize="@dimen/item_height_mid_text_size" />

                <TextView
                    style="@style/TextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fri"
                    android:textSize="@dimen/item_height_mid_text_size" />

                <TextView
                    style="@style/TextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sat"
                    android:textSize="@dimen/item_height_mid_text_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/frag_calender_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/frag_calender_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constrainedHeight="true"
                    app:spanCount="7"
                    tools:listitem="@layout/item_calendar" />
            </LinearLayout>
        </LinearLayout>

        <!-- sldie 레이아웃 -->
        <LinearLayout
            android:id="@+id/slide_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/round_border_two"
            >
            <View
                android:layout_width="30dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="15dp"
                android:layout_marginTop="10dp"
                android:background="#777" />
            <LinearLayout
                android:layout_margin="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_height"
                android:orientation="horizontal">
                <EditText
                    android:padding="@dimen/main_margin"
                    android:hint="할 일을 작성하세요"
                    android:background="@drawable/round_border"
                    android:id="@+id/edit_text"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/item_height"
                    android:layout_weight="5" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/add_button"
                        android:layout_width="@dimen/item_height"
                        android:layout_height="@dimen/item_height"
                        android:src="@drawable/ic_add_box_24" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
</FrameLayout>