<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_border"
    android:backgroundTint="@color/color_type3"
    android:layout_margin="@dimen/main_margin"
    android:gravity="center_horizontal"
    android:layout_width="@dimen/item_height_big_150"
    android:layout_height="@dimen/item_height_big_180"
    android:orientation="vertical">
    <TextView
        android:id="@+id/st_date"
        android:textSize="@dimen/item_height_big_21_text_size"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_margin="@dimen/main_margin"
        tools:text="xxxx.x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/item_height_big_80"
            android:layout_height="@dimen/item_height_big_80">
            <ProgressBar
                android:id="@+id/st_per"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/fab_margin_12dp"
                android:indeterminate="false"
                android:max="100"
                android:progressDrawable="@drawable/circle_progressbar"
                android:progressTint="@color/color_type1" />
            <TextView
                android:id="@+id/st_per_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/strong_color"
                android:textSize="@dimen/item_height_small_text_size"
                android:textStyle="bold"
                tools:text="100%" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/st_point"
        android:textColor="@color/color_type1"
        android:text="@string/point_0"
        android:textStyle="bold"
        android:textSize="@dimen/item_height_small_up_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/st_total"
        android:textColor="@color/color_type1"
        android:text="@string/activity_0"
        android:textStyle="bold"
        android:textSize="@dimen/item_height_small_up_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/st_complete"
        android:textColor="@color/color_type1"
        android:text="@string/complete_0"
        android:textStyle="bold"
        android:textSize="@dimen/item_height_small_up_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>