<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddTaskRoutineFragment.RoutineSupportFragment">
    <LinearLayout
        android:layout_margin="@dimen/main_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:padding="@dimen/main_margin"
            android:textColor="@color/strong_color"
            android:id="@+id/routine_top_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_margin="@dimen/fab_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textSize="@dimen/item_height_big_text_size"
            android:textStyle="bold"
            android:text="@string/add_routine" />

        <LinearLayout
            android:layout_margin="@dimen/main_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/fab_margin"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/routine_edit_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/item_height"
                android:layout_margin="@dimen/main_margin"
                android:layout_weight="5"
                android:background="@drawable/round_border"
                android:hint="@string/typing_in_your_routine"
                android:padding="@dimen/main_margin" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/routine_add_button"
                    android:layout_width="@dimen/item_height"
                    android:layout_height="@dimen/item_height"
                    android:src="@drawable/ic_add_box_24" />
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:padding="@dimen/main_margin"
            android:textColor="@color/strong_color"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:layout_margin="@dimen/fab_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:textSize="@dimen/item_height_big_text_size"
            android:textStyle="bold"
            android:text="@string/result" />

        <LinearLayout
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <include
                android:id="@+id/routine_box"
                layout="@layout/item_repeat_task" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>